--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	},
 	"require": {
 		"php": ">=5.2.4",
-		"mpdf/mpdf": "^7.1"
+		"mpdf/mpdf": "^7.1",
+		"mikehaertl/phpwkhtmltopdf": "^2.3"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
